--- a/adapter/BUILD.gn
+++ b/adapter/BUILD.gn
@@ -29,6 +29,9 @@ if (defined(ohos_lite)) {
     "$libsec_include_path",
     "//third_party/mbedtls/include",
     "//utils/native/base/include",
+    "$dsoftbus_root_path/interfaces/kits",
+    "$dsoftbus_root_path/interfaces/kits/common",
+    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara/include",
   ]
 
   if (ohos_kernel_type == "liteos_m") {
@@ -55,7 +58,7 @@ if (defined(ohos_lite)) {
         "-fPIC",
       ]
       sources = [
-        "$softbus_adapter_common/bus_center/platform/bus_center_adapter_weak.c",
+        "$softbus_adapter_common/bus_center/platform/bus_center_adapter.c",
         "$softbus_adapter_common/kernel/liteos_a/softbus_adapter_file.c",
         "$softbus_adapter_common/kernel/liteos_a/softbus_adapter_mem.c",
         "$softbus_adapter_common/kernel/liteos_a/softbus_adapter_timer.c",
@@ -66,6 +69,7 @@ if (defined(ohos_lite)) {
       deps = [
         "$hilog_lite_deps_path",
         "$libsec_deps_path",
+        "//base/startup/syspara_lite/frameworks/parameter/src:sysparam",
         "//third_party/bounds_checking_function:libsec_shared",
       ]
       deps += [ "//third_party/mbedtls:mbedtls_shared" ]
