description:modify softbus server process problem of gcc compiler.
Signed-off-by: lie <lvjunmao@huawei.com>
Change-Id: I2f0f17ae61001c7eedf164d487edd546c42e7379

--- a/core/adapter/br/mock/BUILD.gn
+++ b/core/adapter/br/mock/BUILD.gn
@@ -15,6 +15,9 @@ import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
 source_set("br_adapter") {
   sources = [ "wrapper_br_interface.c" ]
+  cflags = [
+    "-fPIC",
+  ]
   include_dirs = [
     "$dsoftbus_root_path/core/common/include",
     "$dsoftbus_root_path/core/connection/interface",
