--- a/core/adapter/bus_center/BUILD.gn
+++ b/core/adapter/bus_center/BUILD.gn
@@ -39,6 +39,9 @@ if (defined(ohos_lite)) {
         "//base/startup/syspara_lite/interfaces/innerkits/native/syspara/include",
       ]
       sources = [ "platform/bus_center_adapter.c" ]
+      cflags = [
+        "-fPIC",
+      ]
       deps = [
         "$dsoftbus_root_path/core/common:softbus_utils",
         "$hilog_lite_deps_path",
