--- a/components/nstackx/nstackx_util/BUILD.gn
+++ b/components/nstackx/nstackx_util/BUILD.gn
@@ -149,7 +149,7 @@ if (defined(ohos_lite)) {
     ]
 
     deps = [
-      "//foundation/communication/dsoftbus/components/mbedtls:mbedtls_shared",
+      "//third_party/mbedtls:mbedtls_shared",
       "//utils/native/base:utilsecurec_shared",
     ]
     public_configs = [ ":nstackx_util_header" ]
