--- a/sdk/transmission/session/BUILD.gn
+++ b/sdk/transmission/session/BUILD.gn
@@ -34,6 +34,7 @@ if (defined(ohos_lite)) {
     "$libsec_include_path",
     "$hilog_lite_include_path",
     "//third_party/cJSON",
+    "$dsoftbus_root_path/sdk/transmission/trans_channel/udp/file/include",
   ]
 
   common_deps = [
@@ -83,6 +84,7 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/sdk/transmission/session/cpp/include",
       "$dsoftbus_root_path/interfaces/kits/bus_center",
       "$dsoftbus_root_path/interfaces/kits/common",
+      "$dsoftbus_root_path/sdk/transmission/trans_channel/udp/file/include",
     ]
   }
 
