Description:dsoft support smart dev roaming ability Feature or Bugfix:Feature Binary Source:No
Signed-off-by: hewenjie2021 <hewenjie2@huawei.com>
Description:dsoft smart dev support roaming ability
Feature or Bugfix:Feature
Binary Source:No
Signed-off-by: hewenjie2021 <hewenjie2@huawei.com>

--- a/core/bus_center/BUILD.gn
+++ b/core/bus_center/BUILD.gn
@@ -74,6 +74,7 @@ if (defined(ohos_lite)) {
         "$dsoftbus_root_path/core/discovery/interface",
         "$dsoftbus_root_path/core/common/softbus_property/include",
         "$softbus_adapter_config/spec_config",
+        "$softbus_adapter_common/net/wifi/include",
         "$hilog_lite_include_path",
         "$dsoftbus_root_path/sdk/bus_center/manager/include",
         "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/lane_manager/include",
@@ -141,6 +142,7 @@ if (defined(ohos_lite)) {
         "lnn/net_ledger/local_ledger/include",
         "$dsoftbus_root_path/core/adapter/bus_center/include",
         "$softbus_adapter_common/include",
+        "$softbus_adapter_common/net/wifi/include",
         "$dsoftbus_root_path/core/authentication/interface",
         "$dsoftbus_root_path/core/common/include",
         "$dsoftbus_root_path/core/common/inner_communication",
@@ -223,6 +225,7 @@ if (defined(ohos_lite)) {
       "lnn/net_ledger/local_ledger/include",
       "$dsoftbus_root_path/core/adapter/bus_center/include",
       "$softbus_adapter_common/include",
+      "$softbus_adapter_common/net/wifi/include",
       "$dsoftbus_root_path/core/authentication/interface",
       "$dsoftbus_root_path/core/common/include",
       "$dsoftbus_root_path/core/common/message_handler/include",
@@ -256,6 +259,7 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/core/frame/standard/softbusdata:softbus_server_data",
       "$dsoftbus_root_path/core/transmission/trans_channel/proxy:dsoftbus_trans_proxy_channel",
       "$dsoftbus_root_path/core/transmission/trans_channel/tcp_direct:dsoftbus_trans_direct_channel",
+      "$softbus_adapter_common/net/wifi:softbus_adapter_wifi",
       "lnn/lane_hub:dsoftbus_bus_center_hub",
       "lnn/net_ledger:dsoftbus_bus_center_ledger",
       "utils:dsoftbus_bus_center_utils",
