Description:add the lane monitor Feature or Bugfix:Bugfix Binary Source: No
Signed-off-by: YOUR_NAME <tanyanying@huawei.com>

--- a/tests/core/bus_center/lnn/BUILD.gn
+++ b/tests/core/bus_center/lnn/BUILD.gn
@@ -32,6 +32,7 @@ ohos_unittest("LNNTest") {
     "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/local_ledger/include",
     "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/include",
     "$dsoftbus_root_path/core/common/include",
+    "$dsoftbus_root_path/adapter/common/include",
     "$dsoftbus_root_path/core/connection/interface",
     "$dsoftbus_root_path/core/authentication/interface",
     "$dsoftbus_root_path/core/bus_center/interface",
@@ -48,9 +49,10 @@ ohos_unittest("LNNTest") {
   deps = [
     "$dsoftbus_root_path/core/authentication:dsoftbus_auth_server",
     "$dsoftbus_root_path/core/bus_center:dsoftbus_bus_center_server",
-    "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/lane_manager:dsoftbus_bus_center_hub",
+    "$dsoftbus_root_path/core/bus_center/lnn/lane_hub:dsoftbus_bus_center_hub",
     "$dsoftbus_root_path/core/bus_center/lnn/net_ledger:dsoftbus_bus_center_ledger",
     "$dsoftbus_root_path/core/bus_center/utils:dsoftbus_bus_center_utils",
+    "$dsoftbus_root_path/core/common/utils:softbus_utils",
     "$dsoftbus_root_path/core/connection/manager:conn_manager",
     "$dsoftbus_root_path/core/frame/standard/server:softbus_server",
     "//base/security/deviceauth/services:deviceauth_sdk",
