--- a/core/bus_center/lnn/lane_hub/BUILD.gn
+++ b/core/bus_center/lnn/lane_hub/BUILD.gn
@@ -51,6 +51,7 @@ if (defined(ohos_lite)) {
       deps = [
         "$dsoftbus_root_path/adapter:softbus_adapter",
         "$dsoftbus_root_path/core/bus_center/lnn/net_ledger:dsoftbus_bus_center_ledger",
+        "$dsoftbus_root_path/core/common/utils:softbus_utils",
         "$hilog_lite_deps_path",
       ]
     }
@@ -135,6 +136,7 @@ if (defined(ohos_lite)) {
     deps = [
       "$dsoftbus_root_path/adapter:softbus_adapter",
       "$dsoftbus_root_path/core/bus_center/lnn/net_ledger:dsoftbus_bus_center_ledger",
+      "$dsoftbus_root_path/core/common/utils:softbus_utils",
       "//utils/native/base:utils",
     ]
     if (enable_time_sync == true) {
