--- a/core/bus_center/lnn/net_ledger/BUILD.gn
+++ b/core/bus_center/lnn/net_ledger/BUILD.gn
@@ -20,6 +20,7 @@ config("bus_center_ledger_interface") {
     "$dsoftbus_root_path/interfaces/kits/bus_center",
     "$dsoftbus_root_path/interfaces/kits/common",
     "$dsoftbus_root_path/core/common/softbus_property/include",
+    "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/lane_manager/include",
     "$softbus_adapter_config/spec_config",
   ]
 }
