--- a/adapter/common/net/wifi/BUILD.gn
+++ b/adapter/common/net/wifi/BUILD.gn
@@ -11,24 +11,78 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-import("//build/ohos.gni")
 import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
-ohos_shared_library("softbus_adapter_wifi") {
-  sources = [ "common/softbus_wifi_api_adapter.c" ]
-  include_dirs = [
-    "include",
-    "$dsoftbus_root_path/adapter/common/include",
-    "//foundation/communication/wifi/interfaces/innerkits/native_c",
-    "//foundation/communication/wifi/interfaces/innerkits/native_cpp/wifi_standard/interfaces",
-  ]
-  deps = [
-    "$dsoftbus_root_path/adapter:softbus_adapter",
-    "$dsoftbus_root_path/core/common/log:softbus_log",
-    "//foundation/communication/wifi/interfaces/innerkits/native_cpp/wifi_standard:wifi_sdk",
-    "//third_party/bounds_checking_function:libsec_static",
-  ]
-  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
-  part_name = "dsoftbus_standard"
-  subsystem_name = "communication"
+if (defined(ohos_lite)) {
+  import("//build/lite/config/component/lite_component.gni")
+  if (ohos_kernel_type == "liteos_m") {
+    static_library("softbus_adapter_wifi") {
+      sources = [ "common/softbus_wifi_api_adapter_virtual.c" ]
+      include_dirs = [
+        "include",
+        "$softbus_adapter_common/include",
+        "$softbus_adapter_common/net/wifi/include",
+        "$hilog_lite_include_path",
+      ]
+      cflags = [
+        "-Wall",
+        "-fPIC",
+        "-fno-builtin",
+        "-std=c99",
+      ]
+      deps = [
+        "$dsoftbus_root_path/adapter:softbus_adapter",
+        "$dsoftbus_root_path/core/common/log:softbus_log",
+        "$hilog_lite_deps_path",
+      ]
+    }
+  } else {
+    shared_library("softbus_adapter_wifi") {
+      sources = [ "common/softbus_wifi_api_adapter_virtual.c" ]
+      include_dirs = [
+        "ipc/small_system/include",
+        "$softbus_adapter_common/include",
+        "$softbus_adapter_common/net/wifi/include",
+        "$hilog_lite_include_path",
+      ]
+      cflags = [
+        "-Wall",
+        "-Werror",
+        "-fPIC",
+        "-fno-builtin",
+        "-std=c99",
+      ]
+      deps = [
+        "$dsoftbus_root_path/adapter:softbus_adapter",
+        "$dsoftbus_root_path/core/common/log:softbus_log",
+        "$hilog_lite_deps_path",
+      ]
+    }
+  }
+} else {
+  import("//build/ohos.gni")
+
+  ohos_shared_library("softbus_adapter_wifi") {
+    sources = [ "common/softbus_wifi_api_adapter.c" ]
+    include_dirs = [
+      "include",
+      "$dsoftbus_root_path/adapter/common/include",
+      "//foundation/communication/wifi/interfaces/innerkits/native_c",
+      "//foundation/communication/wifi/interfaces/innerkits/native_cpp/wifi_standard/interfaces",
+    ]
+    deps = [
+      "$dsoftbus_root_path/adapter:softbus_adapter",
+      "$dsoftbus_root_path/core/common/log:softbus_log",
+      "//foundation/communication/wifi/interfaces/innerkits/native_cpp/wifi_standard:wifi_sdk",
+      "//third_party/bounds_checking_function:libsec_static",
+    ]
+    if (is_standard_system) {
+      external_deps = [
+        "hiviewdfx_hilog_native:libhilog",
+        "ipc:ipc_core",
+      ]
+    }
+    part_name = "dsoftbus_standard"
+    subsystem_name = "communication"
+  }
 }
