--- a/core/bus_center/BUILD.gn
+++ b/core/bus_center/BUILD.gn
@@ -107,6 +107,7 @@ if (defined(ohos_lite)) {
         "$dsoftbus_root_path/core/transmission/trans_channel/proxy:dsoftbus_trans_proxy_channel",
         "$dsoftbus_root_path/core/transmission/trans_channel/tcp_direct:dsoftbus_trans_direct_channel",
         "$hilog_lite_deps_path",
+        "$softbus_adapter_common/net/wifi:softbus_adapter_wifi",
       ]
     }
   } else {
@@ -181,6 +182,7 @@ if (defined(ohos_lite)) {
         "$dsoftbus_root_path/core/discovery:dsoftbus_disc_server",
         "$dsoftbus_root_path/core/frame/small/client_manager:client_manager",
         "$hilog_lite_deps_path",
+        "$softbus_adapter_common/net/wifi:softbus_adapter_wifi",
         "lnn/lane_hub:dsoftbus_bus_center_hub",
         "lnn/net_ledger:dsoftbus_bus_center_ledger",
         "utils:dsoftbus_bus_center_utils",
