--- a/core/common/security/permission/BUILD.gn
+++ b/core/common/security/permission/BUILD.gn
@@ -98,7 +98,7 @@ if (defined(ohos_lite)) {
       "hiviewdfx_hilog_native:libhilog",
       "ipc:ipc_core",
       "permission_standard:libpermissionsdk_standard",
-      "samgr_L2:samgr_proxy",
+      "samgr_standard:samgr_proxy",
     ]
 
     part_name = "dsoftbus_standard"
