Description: add softbus_network_utils file Feature or Bugfix:Feature Binary Source: No
Signed-off-by: YOUR_NAME <fengyonghui@huawei.com>

--- a/core/common/BUILD.gn
+++ b/core/common/BUILD.gn
@@ -20,5 +20,6 @@ lite_component("softbus_core_common") {
     "softbus_property:softbus_property",
     "message_handler:message_handler",
     "log:softbus_log",
+    "network:softbus_network_utils",
   ]
 }
