Signed-off-by: laosan_ted <wangruichang@huawei.com>

--- a/core/frame/BUILD.gn
+++ b/core/frame/BUILD.gn
@@ -100,6 +100,7 @@ if (defined(ohos_lite)) {
         "-std=c99",
       ]
       cflags_cc = cflags
+      ldflags = bus_center_hub_ldflags
       deps = dsoftbus_server_common_deps
       deps += [
         ":permission_json",
