--- a/core/bus_center/lnn/lane_hub/lane_hub.gni
+++ b/core/bus_center/lnn/lane_hub/lane_hub.gni
@@ -25,6 +25,7 @@ bus_center_hub_src = [
   "$core_lane_hub_path/lane_manager/src/lnn_smart_communication.c",
 ]
 bus_center_hub_deps = []
+bus_center_hub_ldflags = []
 
 if (defined(ohos_lite)) {
   if (ohos_kernel_type == "liteos_m") {
@@ -43,6 +44,7 @@ if (defined(ohos_lite)) {
               [ "cd $native_source_path; if [ -f $dep_file ]; then echo true; else echo false; fi" ],
               "value")
       if (enhanced) {
+        bus_center_hub_ldflags += [ "-ldsoftbus_time_sync_impl" ]
         bus_center_hub_deps += [ "$dsoftbus_root_path/dsoftbus_enhance/core/bus_center/lnn/lane_hub/time_sync:dsoftbus_time_sync_impl" ]
       } else {
         bus_center_hub_src +=
