Description: add lock in exchange device info. Feature or Bugfix:Feature Binary Source: No
Signed-off-by: juchenyang <juchenyang@huawei.com>

--- a/adapter/BUILD.gn
+++ b/adapter/BUILD.gn
@@ -30,6 +30,7 @@ if (defined(ohos_lite)) {
     hilog_lite_include_path =
         "//base/hiviewdfx/hilog_lite/interfaces/native/kits/hilog_lite"
   } else {
+    defines = [ "SOFTBUS_PRINTF" ]
     hilog_lite_include_path =
         "//base/hiviewdfx/hilog_lite/interfaces/native/innerkits"
   }
