--- a/adapter/common/bus_center/common_bus_center.gni
+++ b/adapter/common/bus_center/common_bus_center.gni
@@ -29,6 +29,7 @@ if (defined(ohos_lite)) {
       "$softbus_adapter_common/bus_center/network/lnn_lwip_monitor_virtual.c",
       "$softbus_adapter_common/bus_center/driver/lnn_driver_monitor_virtual.c",
       "$softbus_adapter_common/bus_center/driver/lnn_driver_request_virtual.c",
+      "$softbus_adapter_common/bus_center/network/lnn_linkwatch.c",
       "$softbus_adapter_common/bus_center/network/lnn_netlink_monitor.c",
       "$softbus_adapter_common/bus_center/platform/lnn_product_monitor_virtual.c",
       "$softbus_adapter_common/bus_center/wlan/lnn_wifiservice_monitor_virtual.cpp",
@@ -40,12 +41,15 @@ if (defined(ohos_lite)) {
       "//drivers/framework/include/core",
       "//drivers/framework/ability/sbuf/include",
     ]
+    bus_center_monitor_src = [
+      "$softbus_adapter_common/bus_center/network/lnn_linkwatch_virtual.c",
+      "$softbus_adapter_common/bus_center/network/lnn_lwip_monitor_virtual.c",
+      "$softbus_adapter_common/bus_center/network/lnn_netlink_monitor_virtual.c",
+      "$softbus_adapter_common/bus_center/platform/lnn_product_monitor.c",
+      "$softbus_adapter_common/bus_center/wlan/lnn_wifiservice_monitor_virtual.cpp",
+    ]
     if (enable_dsoftbus_driver) {
-      bus_center_monitor_src = [
-        "$softbus_adapter_common/bus_center/network/lnn_lwip_monitor_virtual.c",
-        "$softbus_adapter_common/bus_center/network/lnn_netlink_monitor_virtual.c",
-        "$softbus_adapter_common/bus_center/platform/lnn_product_monitor.c",
-        "$softbus_adapter_common/bus_center/wlan/lnn_wifiservice_monitor_virtual.cpp",
+      bus_center_monitor_src += [
         "$softbus_adapter_common/bus_center/driver/lnn_hdf_driver_monitor.c",
         "$softbus_adapter_common/bus_center/driver/lnn_hdf_driver_request.c",
       ]
@@ -63,11 +67,7 @@ if (defined(ohos_lite)) {
         "//drivers/adapter/uhdf/posix:hdf_posix_osal",
       ]
     } else {
-      bus_center_monitor_src = [
-        "$softbus_adapter_common/bus_center/network/lnn_lwip_monitor_virtual.c",
-        "$softbus_adapter_common/bus_center/network/lnn_netlink_monitor_virtual.c",
-        "$softbus_adapter_common/bus_center/platform/lnn_product_monitor.c",
-        "$softbus_adapter_common/bus_center/wlan/lnn_wifiservice_monitor_virtual.cpp",
+      bus_center_monitor_src += [
         "$softbus_adapter_common/bus_center/driver/lnn_driver_monitor_virtual.c",
         "$softbus_adapter_common/bus_center/driver/lnn_driver_request_virtual.c",
       ]
@@ -75,6 +75,7 @@ if (defined(ohos_lite)) {
   }
 } else {
   bus_center_monitor_src = [
+    "$softbus_adapter_common/bus_center/network/lnn_linkwatch.c",
     "$softbus_adapter_common/bus_center/network/lnn_lwip_monitor_virtual.c",
     "$softbus_adapter_common/bus_center/network/lnn_netlink_monitor.c",
     "$softbus_adapter_common/bus_center/platform/lnn_product_monitor_virtual.c",
