--- a/tests/BUILD.gn
+++ b/tests/BUILD.gn
@@ -19,7 +19,10 @@ lite_component("softbus_test") {
   } else {
     features = []
     if (ohos_build_type == "debug") {
-      features += [ "sdk/discovery/unittest:DiscSdkTest" ]
+      features += [
+        "sdk/discovery/unittest:DiscSdkTest",
+        "sdk/transmission/trans_channel:TransSdkTest"
+      ]
     }
   }
 }
