--- a/tests/BUILD.gn
+++ b/tests/BUILD.gn
@@ -21,7 +21,7 @@ lite_component("softbus_test") {
     if (ohos_build_type == "debug") {
       features += [
         "sdk/discovery/unittest:DiscSdkTest",
-        "sdk/transmission/trans_channel:TransSdkTest"
+        "sdk/transmission/trans_channel:TransSdkTest",
       ]
     }
   }
