in MASTER: get local ip code optimization, adapt in liteos_a and liteos_m.
Signed-off-by: YOUR_NAME <xiaoqiang21@huawei.com>

--- a/core/bus_center/utils/bus_center_utils.gni
+++ b/core/bus_center/utils/bus_center_utils.gni
@@ -17,6 +17,7 @@ bus_center_utils_src = [
   "$dsoftbus_root_path/core/bus_center/utils/src/lnn_async_callback_utils.c",
   "$dsoftbus_root_path/core/bus_center/utils/src/lnn_connection_addr_utils.c",
   "$dsoftbus_root_path/core/bus_center/utils/src/lnn_file_utils.c",
+  "$dsoftbus_root_path/core/bus_center/utils/src/lnn_ip_utils.c",
 ]
 bus_center_utils_inc = [ "$dsoftbus_root_path/core/bus_center/utils/include" ]
 bus_center_utils_deps = []
@@ -27,15 +28,8 @@ if (defined(ohos_lite)) {
     if (ohos_third_party_dir == "$hispark_pegasus_sdk_path/third_party") {
       #bus_center_utils_inc += []
     }
-    bus_center_utils_src +=
-        [ "$dsoftbus_root_path/core/bus_center/utils/src/lnn_ip_utils_lite.c" ]
-  } else {
-    bus_center_utils_src +=
-        [ "$dsoftbus_root_path/core/bus_center/utils/src/lnn_ip_utils.c" ]
   }
 } else {
   bus_center_utils_inc += [ "//utils/native/base/include" ]
   bus_center_utils_deps += [ "//utils/native/base:utils" ]
-  bus_center_utils_src +=
-      [ "$dsoftbus_root_path/core/bus_center/utils/src/lnn_ip_utils.c" ]
 }
