--- a/adapter/common/bus_center/common_bus_center.gni
+++ b/adapter/common/bus_center/common_bus_center.gni
@@ -20,6 +20,7 @@ if (defined(ohos_lite)) {
       "$softbus_adapter_common/bus_center/driver/lnn_driver_monitor_virtual.c",
       "$softbus_adapter_common/bus_center/driver/lnn_driver_request_virtual.c",
       "$softbus_adapter_common/bus_center/network/lnn_lwip_monitor.c",
+      "$softbus_adapter_common/bus_center/network/lnn_linkwatch_virtual.c",
       "$softbus_adapter_common/bus_center/network/lnn_netlink_monitor_virtual.c",
       "$softbus_adapter_common/bus_center/platform/lnn_product_monitor_virtual.c",
       "$softbus_adapter_common/bus_center/wlan/lnn_wifiservice_monitor_virtual.cpp",
