--- a/tests/core/connection/common/BUILD.gn
+++ b/tests/core/connection/common/BUILD.gn
@@ -22,6 +22,7 @@ ohos_unittest("softbus_conn_common_test") {
   #ldflags = [ "-lstdc++" ]
   include_dirs = [
     "$dsoftbus_root_path/core/common/include",
+    "$dsoftbus_root_path/adapter/common/include",
     "$dsoftbus_root_path/core/connection/interface",
     "$dsoftbus_root_path/core/connection/common/include",
     "//third_party/googletest/googletest/include",
@@ -30,7 +31,8 @@ ohos_unittest("softbus_conn_common_test") {
   ]
   sources = [ "softbus_conn_common_test.cpp" ]
   deps = [
-    "$dsoftbus_root_path/core/frame/standard/server:softbus_server",
+    "$dsoftbus_root_path/core/common:softbus_utils",
+    "$dsoftbus_root_path/core/frame:softbus_server",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
   ]
