--- a/tests/core/connection/manager/BUILD.gn
+++ b/tests/core/connection/manager/BUILD.gn
@@ -20,7 +20,6 @@ ohos_unittest("softbus_conn_manager_test") {
   module_out_path = module_output_path
   include_dirs = [
     "$dsoftbus_root_path/core/common/include",
-    "$dsoftbus_root_path/core/common/include",
     "$softbus_adapter_common/include",
     "$dsoftbus_root_path/interfaces/kits/common",
     "$dsoftbus_root_path/core/connection/interface",
@@ -32,9 +31,12 @@ ohos_unittest("softbus_conn_manager_test") {
   ]
 
   deps = [
-    "$dsoftbus_root_path/core/frame/standard/server:softbus_server",
+    "$dsoftbus_root_path/core/common:softbus_utils",
+    "$dsoftbus_root_path/core/frame:softbus_server",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
+    "//utils/native/base:utils",
+    "//utils/native/base:utilsecurec_shared",
   ]
 
   external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
