--- a/tests/core/connection/tcp/BUILD.gn
+++ b/tests/core/connection/tcp/BUILD.gn
@@ -35,9 +35,11 @@ ohos_unittest("softbus_tcp_manager_test") {
   sources = [ "tcp_manager_test.cpp" ]
   deps = [
     "$dsoftbus_root_path/core/common:softbus_utils",
-    "$dsoftbus_root_path/core/frame/standard/server:softbus_server",
+    "$dsoftbus_root_path/core/frame:softbus_server",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
+    "//utils/native/base:utils",
+    "//utils/native/base:utilsecurec_shared",
   ]
 
   external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
