--- a/tests/core/common/utils/BUILD.gn
+++ b/tests/core/common/utils/BUILD.gn
@@ -17,10 +17,10 @@ if (defined(ohos_lite)) {
   import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
   if (ohos_build_type == "debug") {
-    unittest("utils_test") {
+    unittest("softbus_utils_test") {
       output_extension = "bin"
       output_dir = "$root_out_dir/tests/unittest/dsoftbus"
-      sources = [ "unittest/utils_test.cpp" ]
+      sources = [ "unittest/softbus_utils_test.cpp" ]
       include_dirs = [ "$dsoftbus_root_path/core/common/include" ]
       ldflags = [
         "-lstdc++",
@@ -34,9 +34,9 @@ if (defined(ohos_lite)) {
   import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
   module_output_path = "dsoftbus_standard/common"
-  ohos_unittest("utils_test") {
+  ohos_unittest("softbus_utils_test") {
     module_out_path = module_output_path
-    sources = [ "unittest/utils_test.cpp" ]
+    sources = [ "unittest/softbus_utils_test.cpp" ]
 
     include_dirs = [ "$dsoftbus_root_path/core/common/include" ]
 
@@ -47,6 +47,6 @@ if (defined(ohos_lite)) {
 
   group("unittest") {
     testonly = true
-    deps = [ ":utils_test" ]
+    deps = [ ":softbus_utils_test" ]
   }
 }
