fix: Add IPC and dsoftbus for qemu-arm-linux-min.
为qemu-arm-linux-min系统增加IPC和软总线能力。

fix #I4NWKB

Signed-off-by: handyohos <zhangxiaotian@huawei.com>
Change-Id: I71b4a7a01de053d5abc3f8baccfbe42984105a93

--- a/adapter/common/bus_center/common_bus_center.gni
+++ b/adapter/common/bus_center/common_bus_center.gni
@@ -87,10 +87,7 @@ if (defined(ohos_lite)) {
     "//foundation/communication/wifi/interfaces/innerkits/native_cpp/wifi_standard/interfaces",
     "//foundation/communication/wifi/services/wifi_standard/wifi_framework/common/net_helper",
   ]
-  bus_center_monitor_deps = [
-    "//foundation/aafwk/standard/interfaces/innerkits/want:want",
-    "//utils/native/base:utils",
-  ]
+  bus_center_monitor_deps = [ "//utils/native/base:utils" ]
 
   if (enable_dsoftbus_driver) {
     bus_center_monitor_src += [
@@ -105,5 +102,5 @@ if (defined(ohos_lite)) {
     ]
   }
 
-  bus_center_monitor_external_deps = [ "ces_standard:cesfwk_innerkits" ]
+  bus_center_monitor_external_deps = []
 }
