--- a/tests/sdk/transmission/trans_channel/udp/file/BUILD.gn
+++ b/tests/sdk/transmission/trans_channel/udp/file/BUILD.gn
@@ -55,10 +55,7 @@ if (defined(ohos_lite)) {
     ]
 
     if (is_standard_system) {
-      external_deps = [
-        "hiviewdfx_hilog_native:libhilog",
-        "permission_standard:libpermissionsdk_standard",
-      ]
+      external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
       part_name = "dsoftbus_standard"
     }
     subsystem_name = "communication"
