bugfix: Remove wifisdk dependency in dsoftbus for qemu-arm-linux platform.
在qemu-arm-linux平台去掉对wifisdk的依赖。

Signed-off-by: handyohos <zhangxiaotian@huawei.com>
Change-Id: Iab7d394d1cad9da6da27e3206f71af9d5d9f870c

#I4NWKB

--- a/adapter/common/net/wifi/net_wifi.gni
+++ b/adapter/common/net/wifi/net_wifi.gni
@@ -14,7 +14,8 @@
 import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
 adapter_wifi_deps = []
-if (defined(ohos_lite)) {
+if (defined(ohos_lite) ||
+    (defined(device_name) && device_name == "qemu-arm-linux")) {
   adapter_wifi_src = [ "$softbus_adapter_common/net/wifi/common/softbus_wifi_api_adapter_virtual.c" ]
   adapter_wifi_inc = [ "$softbus_adapter_common/net/wifi/include" ]
 } else {
