--- a/adapter/BUILD.gn
+++ b/adapter/BUILD.gn
@@ -92,9 +92,11 @@ if (defined(ohos_lite)) {
         "$softbus_adapter_common/kernel/liteos_a/lnn_ip_utils_adapter.c",
         "$softbus_adapter_common/kernel/liteos_a/softbus_adapter_file.c",
         "$softbus_adapter_common/kernel/liteos_a/softbus_adapter_mem.c",
+        "$softbus_adapter_common/kernel/liteos_a/softbus_adapter_thread.c",
         "$softbus_adapter_common/kernel/liteos_a/softbus_adapter_timer.c",
         "$softbus_adapter_common/log/softbus_adapter_log.c",
         "$softbus_adapter_common/mbedtls/softbus_adapter_crypto.c",
+        "$softbus_adapter_common/socket/liteos_a/softbus_adapter_socket.c",
         "$softbus_adapter_config/spec_config/softbus_config_adapter.c",
       ]
       sources += net_bluetooth_src
@@ -131,9 +133,11 @@ if (defined(ohos_lite)) {
       "$softbus_adapter_common/kernel/liteos_a/lnn_ip_utils_adapter.c",
       "$softbus_adapter_common/kernel/liteos_a/softbus_adapter_file.c",
       "$softbus_adapter_common/kernel/liteos_a/softbus_adapter_mem.c",
+      "$softbus_adapter_common/kernel/liteos_a/softbus_adapter_thread.c",
       "$softbus_adapter_common/kernel/liteos_a/softbus_adapter_timer.c",
       "$softbus_adapter_common/log/softbus_adapter_log.c",
       "$softbus_adapter_common/mbedtls/softbus_adapter_crypto.c",
+      "$softbus_adapter_common/socket/liteos_a/softbus_adapter_socket.c",
       "$softbus_adapter_config/spec_config/softbus_config_adapter.c",
     ]
     sources += net_bluetooth_src
